--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background-color: #f5f6fa;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
+.Main {
+  flex: 0.9;
+}
+
+.Graph {
+  margin-top: 20px;
+  height: 300px;
+}
+
+.GraphTitle {
+  margin-top: 20px;
+}
+
+.Logo {
+  margin-right: 15px;
+}
+
+.Header {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 20px;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.Stats {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 720px) {
+  .App {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  .Header{
+    flex-direction: column;
+  }
+  .Dropdown{
+    width: 100%;
+  }
+  .Secondary {
+    margin-top: 20px;
   }
 }
